k8s/backend-deployment.yml
# k8s/backend-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiii-backend
  namespace: kiii-project
  labels:
    app: kiii-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kiii-backend
  template:
    metadata:
      labels:
        app: kiii-backend
    spec:
      containers:
        - name: backend
          image: markoivanovsk1/task-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
