k8s/frontend-deployment.yml
# k8s/frontend-deployment.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  name: kiii-frontend
  namespace: kiii-project
  labels:
    app: kiii-frontend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kiii-frontend
  template:
    metadata:
      labels:
        app: kiii-frontend
    spec:
      containers:
        - name: frontend
          image: markoivanovsk1/task-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
