k8s/backend-service.yml
# k8s/backend-service.yml

apiVersion: v1
kind: Service
metadata:
  name: kiii-backend-service
  namespace: kiii-project
spec:
  selector:
    app: kiii-backend
  ports:
    - port: 8080
      targetPort: 8080
  type: ClusterIP
